my-test/testsuite_scan/ir/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:7:3: error: use of undeclared identifier '__m128i'
    7 |   __m128i __m128i_out, __m128i_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:8:3: error: unknown type name '__m128'; did you mean '__mfp8'?
    8 |   __m128  __m128_out, __m128_result;
      |   ^~~~~~
      |   __mfp8
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:9:3: error: use of undeclared identifier '__m128d'
    9 |   __m128d __m128d_out, __m128d_result;
      |   ^~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:10:3: error: use of undeclared identifier 'v2u64'
   10 |   v2u64 v2u64_op0, v2u64_op1, v2u64_op2, v2u64_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:11:3: error: use of undeclared identifier 'v4i32'
   11 |   v4i32 v4i32_op0, v4i32_op1, v4i32_op2, v4i32_result;
      |   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:19:3: error: use of undeclared identifier 'v2u64_op0'
   19 |   v2u64_op0 = (v2u64){0x0000000058bcc201, 0xffffffffa486c90f};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:19:16: error: use of undeclared identifier 'v2u64'
   19 |   v2u64_op0 = (v2u64){0x0000000058bcc201, 0xffffffffa486c90f};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:20:3: error: use of undeclared identifier 'v2u64_result'
   20 |   v2u64_result = (v2u64){0x1f52d710bf295626, 0xffffffffa486c90f};
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:20:19: error: use of undeclared identifier 'v2u64'
   20 |   v2u64_result = (v2u64){0x1f52d710bf295626, 0xffffffffa486c90f};
      |                   ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:21:3: error: use of undeclared identifier '__m128d_out'; did you mean '__m128_out'?
   21 |   __m128d_out = __lsx_vfsqrt_d((__m128)v2u64_op0);
      |   ^~~~~~~~~~~
      |   __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:21:17: error: call to undeclared function '__lsx_vfsqrt_d'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   21 |   __m128d_out = __lsx_vfsqrt_d((__m128)v2u64_op0);
      |                 ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:21:33: error: use of undeclared identifier '__m128'; did you mean '__mfp8'?
   21 |   __m128d_out = __lsx_vfsqrt_d((__m128)v2u64_op0);
      |                                 ^~~~~~
note: '__mfp8' declared here
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:22:18: error: use of undeclared identifier 'v2u64_result'
   22 |   check_lsx_out(&v2u64_result, &__m128d_out, sizeof(__m128d_out), __FILE__, __LINE__);
      |                  ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:22:33: error: use of undeclared identifier '__m128d_out'; did you mean '__m128_out'?
   22 |   check_lsx_out(&v2u64_result, &__m128d_out, sizeof(__m128d_out), __FILE__, __LINE__);
      |                                 ^~~~~~~~~~~
      |                                 __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:22:53: error: use of undeclared identifier '__m128d_out'; did you mean '__m128_out'?
   22 |   check_lsx_out(&v2u64_result, &__m128d_out, sizeof(__m128d_out), __FILE__, __LINE__);
      |                                                     ^~~~~~~~~~~
      |                                                     __m128_out
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:8:11: note: '__m128_out' declared here
    8 |   __m128  __m128_out, __m128_result;
      |           ^
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:24:3: error: use of undeclared identifier 'v2u64_op0'
   24 |   v2u64_op0 = (v2u64){0x0000000000000000, 0x0000000000000000};
      |   ^~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:24:16: error: use of undeclared identifier 'v2u64'
   24 |   v2u64_op0 = (v2u64){0x0000000000000000, 0x0000000000000000};
      |                ^~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:25:3: error: use of undeclared identifier 'v2u64_result'
   25 |   v2u64_result = (v2u64){0x0000000000000000, 0x0000000000000000};
      |   ^~~~~~~~~~~~
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/UnitTests/Vector/LSX/lsx-vfsqrt_d.c:25:19: error: use of undeclared identifier 'v2u64'
   25 |   v2u64_result = (v2u64){0x0000000000000000, 0x0000000000000000};
      |                   ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
